# web-scrape-indexer

./: LICENSE  README.md
indexer/: README.md  build.gradle.kts  compose.yaml  requests.http  settings.gradle.kts
indexer/src/main/kotlin/com/main/indexer/: IndexerApplication.kt
indexer/src/main/kotlin/com/main/indexer/api/: NewsController.kt  ProductController.kt
indexer/src/main/kotlin/com/main/indexer/config/: ElasticsearchConfig.kt  OpenApiConfig.kt
indexer/src/main/kotlin/com/main/indexer/model/: NewsItem.kt  Product.kt
indexer/src/main/kotlin/com/main/indexer/repository/: NewsRepository.kt  ProductRepository.kt
indexer/src/main/kotlin/com/main/indexer/service/: NewsService.kt  ProductService.kt
indexer/src/main/resources/: application.properties
indexer/src/test/kotlin/com/main/indexer/: IndexerApplicationTests.kt
scrapper/: .gitignore  pyproject.toml
scrapper/simple-scrapper/: news_items.jsonl
scrapper/simple-scrapper/scrappers/: items.py  pipelines.py  settings.py
scrapper/simple-scrapper/scrappers/spiders/: news_spider.py
