[tool.poetry]
name = "scrapper"
version = "0.1.0"
description = ""
authors = ["Kanwal19 <hkps17@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
itemadapter = "^0.9.0"
scrapy = "^2.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
